# cortex

./: .gitignore  PROJECT_SPEC.md  QUICKSTART.md  README.md  Readme.md  audit.md  docker-compose.yml  graphque.txt  neo4jcommands.md  package-lock.json
.github/workflows/: ci.yml
assets/: Cortex Product Video.dc.html  cortex_scenes.jsx  video.jsx
backend/: .gitignore  Dockerfile  alembic.ini  commands.md  main.py  pyproject.toml  requirements.txt  spit_commits.db  test_api.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/api/: auth.py  events.py  github.py  graph.py  health.py  impact.py  ingestion.py  rag.py  repos.py  scaffold.py  snapshots.py  webhook.py
backend/chroma_db/: chroma.sqlite3
backend/chroma_db/b6268ca8-77d8-42af-902c-d32a2c8817fa/: index_metadata.pickle
backend/core/: config.py  database.py  models.py  token_encryption.py
backend/core/parsers/: python_parser.py  typescript_parser.py
backend/core/templates/: api_documentation.md
backend/scripts/: gg.py
backend/services/: commit_service.py  documentation_service.py  event_service.py  git_push_service.py  github_service.py  graph_service.py  health_service.py  impact_service.py  ingestion_service.py  llm_service.py  neo4j_health_service.py  openapi_service.py  rag_service.py  scaffold_service.py  snapshot_service.py  user_repo_service.py  whatif_service.py
backend/tests/: conftest.py  test_auth.py  test_events.py  test_github.py  test_health.py  test_impact.py  test_ingestion.py  test_rag.py  test_repos.py  test_scaffold.py  test_webhook.py
docs/: SYSTEM_DOCS.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/my-app/: package-lock.json
frontend/public/cortex-video/: index.html  video.jsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: AppShell.tsx  AuthGate.tsx  FileTree.tsx  LandingHero.tsx  VideoSplash.tsx
frontend/src/app/context/: AuthContext.tsx
frontend/src/app/graph/: page.tsx
frontend/src/app/health/: page.tsx
frontend/src/app/impact/: BlastChainModes.tsx  SpecDiffMode.tsx  WhatIfMode.tsx  components.tsx  page.tsx  types.ts
frontend/src/app/scaffold/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/timeline/: page.tsx
frontend/src/components/: GraphView.tsx  OpenAPIDiffViewer.tsx  WhatIfScenarioPanel.tsx
frontend/src/lib/: api.ts
frontend/src/types/: impact.ts
