[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SarthakGund", email = "your@email.com" }
]
requires-python = ">=3.12"
dependencies = [
    "celery==5.3.6",
    "fastapi==0.109.2",
    "google-genai>=1.0.0",
    "langchain==0.1.5",
    "langchain-openai==0.0.5",
    "neo4j==5.17.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.1",
    "qdrant-client==1.7.3",
    "redis==5.0.1",
    "sqlalchemy==2.0.25",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "uvicorn==0.27.1",
    # AI / ML
    "google-genai>=1.0.0",
    "sentence-transformers>=5.2.0",
    "chromadb>=1.5.0",
    # Code parsers
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-javascript>=0.23.0",
    # HTTP client (GitHub API, no git-clone needed)
    "httpx>=0.27.0",
    "requests>=2.31.0",
    # Production ASGI server
    "gunicorn>=22.0.0",
    # Token encryption at rest
    "cryptography>=42.0.0",
    # Structured JSON logging
    "python-json-logger>=2.0.0",
    # Database migrations
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
